ml-models-kserve-configs/toxicity-model/templates/toxicity-authpolicy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: toxicity-rule-policy
  namespace: istio-system
spec:
  action: ALLOW
  rules:
  - from:
    - source:
        ipBlocks:
        - "*"
    to:
    - operation:
        hosts:
        - toxicity.dev.curieo.org
  selector:
    matchLabels:
      app: istio-ingressgateway
